--- a/client/src/SCSS/projects/view-edit-delete/deleteProjectModal.scss
+++ b/client/src/SCSS/projects/view-edit-delete/deleteProjectModal.scss
@@ -6,8 +6,6 @@
 		position: absolute;
 		top: 0px;
 		left: 0px;
-		margin-top: -($navbar-height + $view-project-bug-modal-margin + $view-project-bug-modal-border-width);
-		margin-left: -($view-project-bug-modal-margin + $view-project-bug-modal-border-width);
 		background-color: black;
 		opacity: 0.5;
 		height: 100vh;
@@ -50,6 +48,7 @@
 	.centered-buttons-container__delete {
 		float: left;
 		border: 1px solid black;
+		border-radius: 10px;
 		background-color: #d36464;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
@@ -70,6 +69,7 @@
 	.centered-buttons-container__cancel {
 		float: right;
 		border: 1px solid black;
+		border-radius: 10px;
 		background-color: #e7e7e7;
 		// Only top and bottom because of inconisistencies
 		// ...with button and div padding.
