--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -15,11 +15,15 @@ $blue-gray: #50677f;
 // Blue teals
 $light-blue-teal: #8ba8b3;
 $dark-blue-teal: #50798b;
+// Components
+$project-table-background-color: #ffffff;
 
 //==========
 // Heights
 //==========
 $navbar-height: 60px;
+$search-sort-filter-bar-height:  60px;
+$project-bug-table-row-height: 50px;
 
 //=========
 // Widths
