--- a/client/src/SCSS/authentication/registerLogin.scss
+++ b/client/src/SCSS/authentication/registerLogin.scss
@@ -56,6 +56,7 @@
 		margin-top: 10px;
 		margin-bottom: 5px;
 		border: 0;
+		border-radius: 10px;
 		background-color: $light-blue-teal;
 		padding: 10px;
 		width: 100%;
