Finished SearchFilterSortBar functionality

--- a/client/src/SCSS/projects/createProjectSidebar.scss
+++ b/client/src/SCSS/projects/createProjectSidebar.scss
@@ -3,6 +3,8 @@
 
 .create-projects-component {
 	.blurred-background {
+		// Must be more than searchFilterSortBar.scss
+		z-index: 2;
 		position: absolute;
 		top: $navbar-height;
 		background-color: black;
@@ -12,6 +14,8 @@
 	}
 
 	.create-project-sidebar {
+		// Must be more than searchFilterSortBar.scss
+		z-index: 2;
 		position: absolute;
 		top: $navbar-height;
 		margin-bottom: 20px;
@@ -29,7 +33,7 @@
 	}
 
 	.take-up-space {
-		height: 1000px
+		height: 1000px;
 	}
 
 	.x-button {
@@ -51,7 +55,7 @@
 		padding-top: 24px;
 		font-size: 150%;
 	}
-	
+
 	.form__errors {
 		display: block;
 		color: red;
