--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -22,7 +22,7 @@ $project-table-background-color: #ffffff;
 // Heights
 //==========
 $navbar-height: 60px;
-$search-sort-filter-bar-height:  60px;
+$search-filter-sort-bar-height:  60px;
 $project-bug-table-row-height: 50px;
 
 //=========
@@ -30,6 +30,8 @@ $project-bug-table-row-height: 50px;
 //=========
 $edit-account-modal-width:  540px;
 $create-project-bug-sidebar-width: 500px;
+$filter-button-width: 90px;
+$options-button-width: 36px;
 
 //===========
 // Components
