--- a/client/src/SCSS/account/accountModals.scss
+++ b/client/src/SCSS/account/accountModals.scss
@@ -2,7 +2,9 @@
 @import "../utils//mixins";
 
 .account-modals-blurred-background {
-	z-index: 1;
+	// Must be more than searchSortFilter bar and table headers
+	// ...but less than the navbar
+	z-index: 2;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -19,9 +21,10 @@
 	left: 0;
 	height: 100vh;
 	width: 100vw;
-	
+
 	.edit-account-modal {
-		z-index: 1;
+		// Must be the same as account-modals-blurred-background
+		z-index: 2;
 		position: fixed;
 		top: 50%;
 		left: 50%;
