--- a/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
+++ b/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
@@ -3,6 +3,8 @@
 
 .view-project-modal-component {
 	.blurred-background {
+		// Must be more than searchFilterSortBar
+		z-index: 2;
 		position: fixed;
 		top: $navbar-height;
 		background-color: black;
@@ -12,6 +14,8 @@
 	}
 
 	.view-project-modal {
+		// Must be more than searchFilterSortBar
+		z-index: 2;
 		position: fixed;
 		top: $navbar-height;
 		margin: $view-project-bug-modal-margin;
@@ -32,7 +36,7 @@
 	}
 
 	.project-options-container {
-		z-index: 2;
+		z-index: 3;
 		position: absolute;
 		top: 8px;
 		right: 50px;
@@ -40,22 +44,30 @@
 	}
 
 	.project-options-container__button {
-		z-index: 3;
+		// Must be more than project-options-conatiner so its top border 
+		// ...can be covered to make containers look in unison
+		z-index: 4;
 		position: absolute;
-		right: 6px;
-		border: 2px solid transparent;
+		right: 4px;
+		// Border given color through JS
+		border: 3px solid transparent;
 		border-bottom: none;
-		padding: 0px 3px 0px 5px;
 		background: none;
 		height: 29px;
-		width: 23px;
+		width: $options-button-width;
 		color: $dark-gray;
 		font-size: 28px;
+		text-align: center;
 		cursor: pointer;
 	}
 	.project-options-container__button:hover,
 	.project-options-container__button:active {
 		color: $black;
+	}
+
+	.project-options-container__button__text {
+		@include dead-center();
+		width: $options-button-width;
 	}
 
 	.project-options-container__button--selected {
@@ -67,7 +79,7 @@
 	.project-options-container__dropdown {
 		position: absolute;
 		top: 29px;
-		border: 2px solid black;
+		border: 3px solid black;
 		background-color: white;
 		// Made visible using JS
 		visibility: hidden;
