--- a/client/src/SCSS/account/accountDropdown.scss
+++ b/client/src/SCSS/account/accountDropdown.scss
@@ -4,7 +4,7 @@
 	.dropdown-container {
 		position: absolute;
 		right: 0;
-		border: 5px solid black;
+		border: 5px solid $light-blue-gray;
 		border-top: none;
 		border-right: none;
 		background: white;
