--- a/client/src/SCSS/projects-bugs-shared/searchFilterSortBar.scss
+++ b/client/src/SCSS/projects-bugs-shared/searchFilterSortBar.scss
@@ -19,6 +19,13 @@
 		width: 100%;
 	}
 
+	// Moves sort-by dropdown-list, sort-by-ascending radio buttons,
+	// ...and filter dropdown button to the right of the bar
+	.search-filter-sort-bar__sort-filter-group-container {
+		position: absolute;
+		right: 0px;
+	}
+
 	.search-filter-sort-bar__centering-container {
 		position: relative;
 		float: left;
@@ -26,11 +33,10 @@
 	}
 
 	.search-filter-sort-bar__centering-container--for-new-project-button {
-		width: 140px;
+		width: 160px;
 	}
 
 	.search-filter-sort-bar__centering-container--for-search-bar {
-		margin-left: 10px;
 		width: 300px;
 	}
 
@@ -59,8 +65,9 @@
 		@include dead-center();
 
 		border: 2px solid $light-blue-gray;
-		padding: 5px;
-		width: 100%;
+		padding: 5px 8px 5px 8px;
+		// Not 100% since padding and border would extend past the container
+		width: 95%;
 		font-size: 14px;
 	}
 	.search-filter-sort-bar__centering-container__search-bar:focus {
@@ -93,70 +100,90 @@
 	}
 
 	.search-filter-sort-bar__centering-container__inner-container__block--bottom-margin {
-		margin-bottom: 5px;
+		margin-bottom: 3px;
 	}
 
 	.search-filter-sort-bar__filter-container {
-		position: absolute;
-		top: 0;
-		right: 10px;
+		float: right;
+		margin-left: 50px;
 	}
 
 	.search-filter-sort-bar__filter-container__button {
 		@include stop-text-selection();
 
-		// Must be more than search-filter-sort-bar__filter-container__content-container
+		// Must be more than search-filter-sort-bar__filter-container__content-dropdown
 		// ...so its top border can be covered to make containers look in unison
 		z-index: 1;
 		position: absolute;
 		top: 13px;
-		right: 0px;
-		border: 3px solid black;
-		border-bottom: none;
+		right: 16px;
+		border: 1px solid black;
 		background-color: white;
 		height: 30px;
 		width: $filter-button-width;
 		font-size: 20px;
 		text-align: center;
+		cursor: pointer;
 
+	}
+
+	.search-filter-sort-bar__filter-container__button--clicked {
+		// Negative margin because border resize moves the element
+		margin: -2px -2px 0px;
+		border: 3px solid black;
+		border-bottom: none;
+		height: 54px;
 	}
 
 	.search-filter-sort-bar__filter-container__button__text {
-		@include dead-center();
+		// Used vertical-center since resize would move the text
+		@include vertical-center();
+		top: 4px;
 		width: $filter-button-width;
 	}
 
-	.search-filter-sort-bar__filter-container__content-container {
+	.search-filter-sort-bar__filter-container__content-dropdown {
 		z-index: 0;
 		position: absolute;
-		top: 43px;
-		right: 0;
+		/* top: 41px; */
+		top: 65px;
+		// 2px less than button since border resize moves the button
+		right: 14px;
 		border: 3px solid black;
 		background-color: white;
-		height: 180px;
-		width: 300px;
+		height: 200px;
+		width: 330px;
+		cursor: default;
+		// Made visible using JS
+		visibility: hidden;
 	}
 
-	.search-filter-sort-bar__filter-container__content-container__content {
+	.search-filter-sort-bar__filter-container__content-dropdown__content {
 		float: left;
-		margin: 15px 15px 5px 15px;
+		margin: 15px 0px 5px 20px;
 		text-align: center;
 	}
 	
-	.search-filter-sort-bar__filter-container__content-container__content--right {
+	.search-filter-sort-bar__filter-container__content-dropdown__content--right {
 		float: right;
+		margin: 15px 20px 5px 0px;
 	}
 
-	.search-filter-sort-bar__filter-container__content-container__content__title {
+	.search-filter-sort-bar__filter-container__content-dropdown__content__title {
 		display: block;
 		margin: 2px 0px 5px 0px;
 		border-bottom: 1px solid gray;
-		padding-bottom: 2px;
+		padding-bottom: 3px;
 		font-weight: bold;
 		
 	}
 
-	.search-filter-sort-bar__filter-container__content-container__content__block {
+	.search-filter-sort-bar__filter-container__content-dropdown__content__block {
 		text-align: left;
+	}
+
+	.search-filter-sort-bar__filter-container__content-dropdown__content__block__checkbox,
+	.search-filter-sort-bar__filter-container__content-dropdown__content__block__label {
+		margin: 5px 3px 5px 3px;
 	}
 }
