--- a/client/src/SCSS/projects/projectsTableAndRows.scss
+++ b/client/src/SCSS/projects/projectsTableAndRows.scss
@@ -39,6 +39,10 @@
 		width: 250px;
 	}
 
+	/* .project-table__header__span {
+		display: inline-block;
+	} */
+
 	.project-table__data {
 		@include border-line();
 		padding: 0px 7px 0px 7px;
