--- a/client/src/SCSS/authentication/registerLogin.scss
+++ b/client/src/SCSS/authentication/registerLogin.scss
@@ -46,6 +46,10 @@
 		text-align: center;
 		font-size: 14px;
 	}
+
+	.form__text-input--password {
+		font: small-caption;
+	}
 	
 	.form__errors {
 		display: block;
