--- a/client/src/SCSS/projects/view-edit-delete/editProjectInfo.scss
+++ b/client/src/SCSS/projects/view-edit-delete/editProjectInfo.scss
@@ -31,7 +31,7 @@
 		background-color: white;
 		padding: 4px;
 		height: 43px;
-		width: 550px;
+		width: 600px;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 28px;
 		font-weight: bold;
@@ -49,7 +49,8 @@
 		border: 2px solid black;
 		background-color: white;
 		padding: 4px 8px 4px 8px;
-		height: 150px;
+		// Correct height is applied using JS
+		height: 0px;
 		width: 100%;
 		line-height: $common-line-height;
 		font-family: Arial, Helvetica, sans-serif;
