Began adding functionality to mass delete projects

--- a/client/src/SCSS/projects/createProjectSidebar.scss
+++ b/client/src/SCSS/projects/createProjectSidebar.scss
@@ -162,10 +162,12 @@
 	// ...of completion date based of the status of the project
 	.grayed-out-label {
 		color: $medium-light-gray;
+		pointer-events: none;
 	}
 
 	.grayed-out-date {
 		background-color: white;
 		color: $medium-light-gray;
+		pointer-events: none;
 	}
 }
