--- a/client/src/SCSS/projects/view-edit-delete/editProjectInfo.scss
+++ b/client/src/SCSS/projects/view-edit-delete/editProjectInfo.scss
@@ -98,7 +98,7 @@
 		position: relative;
 		float: right;
 		margin: -32px 80px 0px 0px;
-		// Becomes visible via a mouseover event added to the completionDate container
+		// Becomes visible via a mouseover event added to the completion_date container
 		visibility: hidden;
 	}
 
