--- a/client/src/SCSS/authentication/registerLogin.scss
+++ b/client/src/SCSS/authentication/registerLogin.scss
@@ -5,7 +5,7 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		background-image: url(../images/BlueBackground_1920.jpg);
+		background-image: url(../../images/BlueBackground_1920.jpg);
 		height: 100vh;
 		width: 100vw;
 	}
