--- a/client/src/SCSS/projects/projectsTableAndRows.scss
+++ b/client/src/SCSS/projects/projectsTableAndRows.scss
@@ -40,20 +40,20 @@
 		width: 250px;
 	}
 
+	.project-table__header--for-mass-delete {
+		position: relative;
+		width: 80px;
+		min-width: 80px;
+	}
+
 	.project-table__header__centering-container {
 		display: inline-block;
 	}
 
 	.project-table__header__centering-container__sort-arrows {
 		@include vertical-center();
-		margin-left: 5px;
+		margin-left: 8px;
 		cursor: pointer;
-	}
-
-	.project-table__header__checkbox {
-		position: relative;
-		width: 80px;
-		min-width: 80px;
 	}
 
 	.project-table__header__mass-delete-options {
@@ -84,6 +84,10 @@
 	.project-table__data__info--blue-link {
 		color: blue;
 		font-size: 105%;
+		cursor: pointer;
+	}
+
+	.project-table__data__checkbox {
 		cursor: pointer;
 	}
 }
