--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -15,8 +15,12 @@ $blue-gray: #50677f;
 // Blue teals
 $light-blue-teal: #8ba8b3;
 $dark-blue-teal: #50798b;
+// Blue for links
+$blue-link: #006eff;
+$blue-link2: #14a1e3;
 // Components
 $project-table-background-color: #ffffff;
+$account-dropdown-button-color: $light-blue-gray;
 
 //==========
 // Heights
@@ -55,4 +59,5 @@ $common-line-height: 20px;
 //============
 // Arithmetic
 //============
-$search-bar-button-height-width: $search-bar-height + $search-bar-border-width * 2;
+$search-bar-button-height: $search-bar-height + $search-bar-border-width * 2;
+$search-bar-button-width: $search-bar-height + $search-bar-border-width * 2 + 10;
