--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -18,6 +18,7 @@ $dark-blue-teal: #50798b;
 // Blue for links
 $blue-link: #006eff;
 $blue-link2: #14a1e3;
+$blue-link3: #1084DC;
 // Components
 $project-table-background-color: #ffffff;
 $account-dropdown-button-color: $light-blue-gray;
