Abstracted similar SCSS for deleteProjectModal and massDeleteProjectsModal into a single SCSS file

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -16,9 +16,7 @@ $blue-gray: #50677f;
 $light-blue-teal: #8ba8b3;
 $dark-blue-teal: #50798b;
 // Blue for links
-$blue-link: #006eff;
-$blue-link2: #14a1e3;
-$blue-link3: #1084DC;
+$blue-link: #0062e2;
 // Components
 $project-table-background-color: #ffffff;
 $account-dropdown-button-color: $light-blue-gray;
