Refactored searchFilterSortBar SCSS

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -16,7 +16,7 @@ $blue-gray: #50677f;
 $light-blue-teal: #8ba8b3;
 $dark-blue-teal: #50798b;
 // Blue for links
-$blue-link: #0062e2;
+$blue-link: #005ed8;
 // Components
 $project-table-background-color: #ffffff;
 $account-dropdown-button-color: $light-blue-gray;
