--- a/client/src/SCSS/projects-bugs-shared/searchFilterSortBar.scss
+++ b/client/src/SCSS/projects-bugs-shared/searchFilterSortBar.scss
@@ -23,15 +23,8 @@
 		position: relative;
 		float: left;
 		height: $search-filter-sort-bar-height;
-	}
-
-	.search-filter-sort-bar__centering-container--for-new-project-button {
+		// This width is for the new project button. Searchbars width is changed by JS
 		width: 152px;
-	}
-
-	.search-filter-sort-bar__centering-container--for-search-bar {
-		// Width gets changed by JS
-		width: 100px;
 	}
 
 	.search-filter-sort-bar__centering-container__new-project-button {
@@ -47,16 +40,16 @@
 		cursor: pointer;
 	}
 
-	.search-filter-sort-bar__centering-container__inner-container {
+	.search-filter-sort-bar__centering-container__search-group-container {
 		@include dead-center();
 		width: 100%;
 	}
 
-	.search-filter-sort-bar__centering-container__inner-container--search-bar-border {
-		border: 2px solid $blue-gray;
+	.search-filter-sort-bar__centering-container__search-group-container--with-border {
+		border: 1px solid $blue-gray;
 	}
 
-	.search-filter-sort-bar__centering-container__inner-container__search-bar {
+	.search-filter-sort-bar__centering-container__search-group-container__search-bar {
 		display: inline-block;
 		border: $search-bar-border-width solid $light-blue-gray;
 		padding: 0px 8px 0px 8px;
@@ -66,7 +59,7 @@
 		font-size: 14px;
 	}
 
-	.search-filter-sort-bar__centering-container__inner-container__search-bar-button {
+	.search-filter-sort-bar__centering-container__search-group-container__search-bar-button {
 		display: inline-block;
 		// Instead of relative to make sure the button always stays next to the search-bar
 		position: absolute;
@@ -75,33 +68,33 @@
 		width: $search-bar-button-width;
 		cursor: pointer;
 	}
-	.search-filter-sort-bar__centering-container__inner-container__search-bar-button:hover,
-	.search-filter-sort-bar__centering-container__inner-container__search-bar-button:active {
+	.search-filter-sort-bar__centering-container__search-group-container__search-bar-button:hover,
+	.search-filter-sort-bar__centering-container__search-group-container__search-bar-button:active {
 		background-color: $blue-gray;
 	}
 
-	.search-filter-sort-bar__centering-container__inner-container__search-bar-button__icon {
+	.search-filter-sort-bar__centering-container__search-group-container__search-bar-button__icon {
 		@include dead-center();
 		color: white;
 	}
 
-	// Moves sort-by dropdown-list, sort-by-ascending radio buttons,
-	// ...and filter dropdown button to the right of the bar
-	.search-filter-sort-bar__sort-filter-group-container {
+	// Lets the searchbar resize know when to stop 
+	// ...and positons filter dropdown to the right
+	.search-filter-sort-bar__filter-area-container {
 		position: absolute;
 		right: 0px;
 		width: 109px;
 	}
 
-	.search-filter-sort-bar__filter-container {
+	.search-filter-sort-bar__filter-area-container__dropdown-container {
 		float: right;
 		margin-left: 50px;
 	}
 
-	.search-filter-sort-bar__filter-container__button {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__button {
 		@include stop-text-selection();
 
-		// Must be more than search-filter-sort-bar__filter-container__content-dropdown
+		// Must be more than search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown
 		// ...so its top border can be covered to make containers look in unison
 		z-index: 1;
 		position: absolute;
@@ -114,10 +107,9 @@
 		font-size: 20px;
 		text-align: center;
 		cursor: pointer;
-
 	}
 
-	.search-filter-sort-bar__filter-container__button--clicked {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__button--clicked {
 		// Negative margin because border resize moves the element
 		margin: -2px -2px 0px;
 		border: 3px solid black;
@@ -125,14 +117,14 @@
 		height: 54px;
 	}
 
-	.search-filter-sort-bar__filter-container__button__text {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__button__text {
 		// Used horizontal-center since resize would move the text
 		@include horizontal-center();
 		top: 4px;
 		width: $filter-button-width;
 	}
 
-	.search-filter-sort-bar__filter-container__content-dropdown {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown {
 		position: absolute;
 		/* top: 41px; */
 		top: 65px;
@@ -147,32 +139,31 @@
 		visibility: hidden;
 	}
 
-	.search-filter-sort-bar__filter-container__content-dropdown__content {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown__content {
 		float: left;
 		margin: 15px 0px 5px 20px;
 		text-align: center;
 	}
-	
-	.search-filter-sort-bar__filter-container__content-dropdown__content--right {
+
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown__content--right {
 		float: right;
 		margin: 15px 20px 5px 0px;
 	}
 
-	.search-filter-sort-bar__filter-container__content-dropdown__content__title {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown__content__title {
 		display: block;
 		margin: 2px 0px 5px 0px;
 		border-bottom: 1px solid gray;
 		padding-bottom: 3px;
 		font-weight: bold;
-		
 	}
 
-	.search-filter-sort-bar__filter-container__content-dropdown__content__block {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown__content__block {
 		text-align: left;
 	}
 
-	.search-filter-sort-bar__filter-container__content-dropdown__content__block__checkbox,
-	.search-filter-sort-bar__filter-container__content-dropdown__content__block__label {
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown__content__block__checkbox,
+	.search-filter-sort-bar__filter-area-container__dropdown-container__content-dropdown__content__block__label {
 		margin: 5px 3px 5px 3px;
 	}
 }
