--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -27,6 +27,7 @@ $account-dropdown-button-color: $light-blue-gray;
 $navbar-height: 60px;
 $search-filter-sort-bar-height:  60px;
 $search-bar-height: 28px;
+$edit-account-modal-height: 480px;
 $project-bug-table-row-height: 50px;
 
 //=========
