--- a/client/src/SCSS/account/accountSidebar.scss
+++ b/client/src/SCSS/account/accountSidebar.scss
@@ -1,24 +1,28 @@
-@import '../utils/variables';
+@import "../utils/variables";
 
-.account-dropdown-component {
-	.dropdown-container {
+.account-sidebar-component {
+	.sidebar-container {
 		// Must be more than searchFilterSortBar.scss
 		z-index: 2;
 		position: fixed;
 		top: $navbar-height;
 		right: 0;
+		// Used by JS during resize to give margin to bottom
+		margin-bottom: 20px;
 		border: 5px solid black;
 		border-top: none;
 		border-right: none;
 		background: white;
 		height: 250px;
-		/* width: 235px; */
 		width: 350px;
 		text-align: left;
 		font-family: Arial, Helvetica, sans-serif;
+		// Gives sidebar scrolling when content goes beyond height
+		overflow-y: auto !important;
+		overflow-x: hidden !important;
 	}
 
-	// Used so that the padding does not affect the size of the dropdown-container
+	// Used so that the padding does not affect the size of the sidebar-container
 	.padded-container {
 		padding: 20px 10px 10px 15px;
 	}
@@ -27,6 +31,10 @@
 		display: block;
 		margin-bottom: 8px;
 		font-size: 16px;
+
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	.account-info--large-bold {
