--- a/client/src/SCSS/projects/createProjectSidebar.scss
+++ b/client/src/SCSS/projects/createProjectSidebar.scss
@@ -16,8 +16,9 @@
 	.create-project-sidebar {
 		// Must be more than searchFilterSortBar.scss
 		z-index: 2;
-		position: absolute;
+		position: fixed;
 		top: $navbar-height;
+		// Used by JS during resize to give margin to bottom
 		margin-bottom: 20px;
 		border: 5px solid black;
 		border-top: none;
@@ -28,7 +29,7 @@
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
-		overflow-y: scroll !important;
+		overflow-y: auto !important;
 		overflow-x: hidden !important;
 	}
 
