Fixed description textarea bug on window resize

--- a/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
+++ b/client/src/SCSS/projects/view-edit-delete/viewProjectModal.scss
@@ -117,7 +117,7 @@
 
 	.project-content-container {
 		// Gives modal scrolling when content goes beyond modal height
-		overflow-y: scroll !important;
+		overflow-y: auto !important;
 		overflow-x: hidden !important;
 	}
 
