Refactored redux so priority status options are inside the project/bug containers

--- a/client/src/SCSS/account/accountModals.scss
+++ b/client/src/SCSS/account/accountModals.scss
@@ -47,6 +47,10 @@
 		margin-top: 5px;
 	}
 
+	.form__label--top-margin {
+		margin-top: 40px;
+	}
+
 	.form__label__captial-delete {
 		margin-left: 2px;
 		margin-right: 2px;
